fix page-align-center

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,18 +15,19 @@ body {
 .body-container {
   height: 100%;
   display: flex;
+  margin: 0 auto 0 auto;
   justify-content: center;
-  flex-wrap: wrap;
 }
 
 .menu {
   height: 100%;
-  width: 178px;
-  margin-right: 20px;
+  width: 290px;
 }
 
 .nav {
   height: 100%;
+  width: 178px;
+  margin-left: 75px;
 }
 
 .window-description-input {
